<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/line"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <ImageView
        android:id="@+id/imageView_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/contact_photo"
        android:padding="8dp"
        android:src="@drawable/selector_contact" />

    <ImageView
        android:id="@+id/imageView_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView_photo"
        android:layout_alignRight="@+id/imageView_photo"
        android:contentDescription="@string/un_contact"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/textView_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView_warning"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@+id/imageView_read"
        android:singleLine="true"
        android:text="@string/test_body" />

    <TextView
        android:id="@+id/textVIew_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/test_date" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/imageView_photo"
        android:singleLine="true"
        android:text="@string/contact_name"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_body"
        android:layout_alignLeft="@+id/textView_name"
        android:contentDescription="@string/read"
        android:src="@drawable/ic_unread" />

</RelativeLayout>