<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="#323337"
    android:gravity="center"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView_actionbar_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/left"
        android:padding="8dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView_actionbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#FCFCFC"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView_actionbar_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/right"
        android:padding="8dp"
        android:src="@drawable/ic_search" />

</LinearLayout>