<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/test_date" />

    <ImageView
        android:id="@+id/imageView_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@id/textView_time"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/contact_photo"
        android:padding="8dp"
        android:src="@drawable/ic_contact" />

    <TextView
        android:id="@+id/textView_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_time"
        android:layout_marginEnd="40dp"
        android:layout_toRightOf="@id/imageView_photo"
        android:background="@drawable/item_left_gb"
        android:gravity="center|top"
        android:text="@string/test_body"
        android:textSize="24sp" />

</RelativeLayout>