<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="4dp" >

    <ImageView
        android:id="@+id/imageView_plus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:contentDescription="@string/plus"
        android:src="@drawable/ic_plus" />

    <EditText
        android:id="@+id/editText_sms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_bg"
        android:gravity="top|start"
        android:hint="@string/sms" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg"
        android:text="@string/send_sms" />

</LinearLayout>